# Projects

./: .gitattributes  README.md
Hexagon Project/HexagonSerdar/: Assembly-CSharp.csproj  HexagonSerdar.sln
Multiple Vehicle Route Planning/: Gui.java  GuiFrame.form  GuiFrame.java  Rota.java  Sehir.java  Tir.java
Online Ticket Reservation System/: basariliGiris.php  biletIptal.php  errors.php  girisYap.php  index.html  islemler.php  kayitTamamla.php  odemeYap.php  pnrSorgula.php  seferEkle.php  seferSorgula.php  seferler.txt  server.php  uyeOl.php
RAR Archive Password Recovery/: main.c  usage
ROS - Autonomous Exploration Robot with Gazebo Simulation/: README.md  catkinws.txt
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/: CMakeLists.txt  package.xml
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/config/: object_detection.yaml
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/launch/: object_detection.launch  rtg_proje.launch  rtg_proje_otonom.launch  start.launch  yarisma.launch
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/media/materials/scripts/: hazmat.material  qr.material
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/rviz/: rtg_proje.rviz  rtg_proje2.rivz.rviz  rtg_proje3.rviz
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/scripts/: darknetsub.py  otonom.py
ROS - Autonomous Exploration Robot with Gazebo Simulation/catkin_ws/src/rtg_proje/worlds/: exp3_alan.world  exp3_alan1.world
Speech Recognition for Turkish Language/: README.md  predict.py  train.py
Turkish Language Modelling and Text Prediction with Deep Learning/: README.md
Turkish Language Modelling and Text Prediction with Deep Learning/Bert/: bert.py
Voice Picking/Android App/: MainActivity.java  (+4 more)
(+159 files in other folders)
