<?xml version="1.0"?>
<package>
  <name>rtg_proje</name>
  <version>0.0.0</version>
  <description>The rtg_proje Package</description>
  <maintainer email="nihaltun@yildiz.edu.tr">nihal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>gazebo_ros</run_depend>

  <build_depend>darknet_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>darknet_ros</run_depend>


  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
